add goods controller